# faust

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.12.1.md  codecov.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  codeql-analysis.yml  dist.yml  gh-pages.yml  lint.yml  performance-benchmark.yml  python-package.yml
docs/: authors.rst  changelog.rst  conf.py  contributing.rst  copyright.rst  index.md  introduction.rst
docs/_ext/: typehints.py
docs/adr/: 0001-native-opentelemetry-tracing.md
docs/includes/: faq.txt  installation.txt  introduction.txt  resources.txt  settingref.txt  tags.txt
docs/keepachangelog/: changelog.md  commit.md  section.md  version.md
docs/reference/: faust.sensors.otel.rst  faust.stores.aerospike.rst  index.rst
docs/templates/: readme.txt
docs/userguide/: application.rst  cli.rst  debugging.rst  models.rst  sensors.rst  streams.rst  testing.rst
examples/: bound_agent.py  fastapi.py  fastapi_example.py  hello_world.py  livecheck.py  word_count.py
examples/advanced/: service.py
examples/django/: setup.py
examples/django/proj/: __init__.py
examples/django/requirements/: default.txt
examples/fastapi/: README.rst  main.py
examples/fastapi/api/: __init__.py  my_api.py
examples/fastapi/my_faust/: app.py
examples/fastapi/requirements/: default.txt
examples/kubernetes/producer/: producer.py
examples/windowing/: hopping.py  hopping_2.py
extra/bandit/: baseline.json
extra/release/: sphinx2rst_config.py
extra/tools/: ci_benchmark.py  verify_doc_defaults.py
faust/: __init__.py  __main__.py  auth.py  channels.py  events.py  exceptions.py  joins.py  streams.py  topics.py  windows.py  worker.py
faust/_cython/: streams.pyx
faust/agents/: __init__.py  actor.py  agent.py  manager.py  models.py  replies.py
faust/app/: __init__.py  _attached.py  base.py  router.py
faust/assignor/: __init__.py  client_assignment.py  cluster_assignment.py  copartitioned_assignor.py  leader_assignor.py  partition_assignor.py
faust/cli/: __init__.py  agents.py  base.py  clean_versions.py  completion.py  faust.py  livecheck.py  model.py  models.py  params.py  reset.py  send.py  tables.py  worker.py
faust/contrib/: sentry.py
faust/fixups/: __init__.py  base.py  django.py
faust/livecheck/: __init__.py  app.py  case.py  exceptions.py  locals.py  models.py  runners.py  signals.py
faust/livecheck/patches/: __init__.py  aiohttp.py
faust/models/: __init__.py  base.py  fields.py  record.py  tags.py  typing.py
faust/sensors/: __init__.py  base.py  datadog.py  distributed_tracing.py  monitor.py  otel.py  prometheus.py  statsd.py
faust/serializers/: __init__.py  codecs.py  registry.py  schemas.py
faust/stores/: __init__.py  aerospike.py  base.py  memory.py  rocksdb.py
faust/tables/: __init__.py  base.py  globaltable.py  manager.py  objects.py  recovery.py  sets.py  table.py  wrappers.py
faust/transport/: __init__.py  base.py  conductor.py  consumer.py  producer.py  utils.py
faust/transport/_cython/: conductor.pyx
faust/transport/drivers/: __init__.py  aiokafka.py  confluent.py
faust/types/: __init__.py  _env.py  agents.py  app.py  assignor.py  auth.py  channels.py  codecs.py  core.py  enums.py  events.py  fixups.py  joins.py  models.py  router.py  sensors.py  serializers.py  stores.py  streams.py  tables.py  topics.py  transports.py  tuples.py  web.py  windows.py
faust/types/settings/: __init__.py  base.py  params.py  sections.py  settings.py
faust/utils/: __init__.py  _iso8601_python.py  _opentracing.py  agent_stopper.py  codegen.py  cron.py  functional.py  iso8601.py  json.py  otel_tracing.py  platforms.py  tracing.py  urls.py  venusian.py
faust/utils/terminal/: __init__.py  spinners.py  tables.py
faust/web/: __init__.py  base.py  blueprints.py  exceptions.py  views.py
faust/web/apps/: graph.py  production_index.py  router.py  stats.py  tables.py
faust/web/cache/: __init__.py  cache.py  exceptions.py
faust/web/drivers/: __init__.py  aiohttp.py
requirements/: ci.txt  default.txt  dist.txt  docs.txt  requirements.txt  test.txt
requirements/extras/: aerospike.txt  cchardet.txt  ckafka.txt  confluent.txt  eventlet.txt  opentelemetry.txt  opentracing.txt  rocksdb.txt  rocksdict.txt  setproctitle.txt  statsd.txt
scripts/: check  clean  coverage  install  lint  publish  tests
t/unit/transport/: test_consumer.py
tests/: conftest.py  helpers.py
tests/bench/: base.py  baseline.py  forward.py
tests/consistency/: consistency_checker.py  test_consistency.py
tests/functional/: conftest.py  helpers.py  test_aiokafka.py  test_app.py  test_channels.py  test_models.py  test_streams.py
tests/functional/agents/: helpers.py  test_concurrency.py  test_current_agent.py  test_isolated_partitions.py
tests/functional/models/: test_typing.py  test_union_compatibility.py
tests/functional/sensors/: test_statsd.py
tests/functional/serializers/: test_registry.py
tests/functional/web/: conftest.py  test_cache.py  test_tables.py  test_views.py
tests/integration/: app.py  conftest.py
tests/integration/broker/: conftest.py  test_offset_commit.py  test_smoke.py
tests/integration/cache/: conftest.py  test_redis.py
tests/integration/cli/: test_agents.py  test_base.py  test_model.py  test_models.py
tests/meticulous/assignor/: test_copartitioned_assignor.py
tests/old/: app.py  test_simple.py
tests/regression/i323/: conftest.py  test_autodiscover.py
tests/regression/i324/: conftest.py  test_autodiscover.py
tests/stress/: app.py  config.py  killer.py  models.py  producer.py  requirements.txt
tests/stress/reports/: app.py  checks.py  collector.py  logging.py  models.py  states.py  web.py
tests/unit/: conftest.py  test_auth.py  test_events.py  test_faust.py  test_joins.py  test_streams.py  test_topics.py  test_worker.py
tests/unit/agents/: test_actor.py  test_agent.py  test_manager.py  test_replies.py
(+87 files in other folders)
