[project]
name = "faust-streaming"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers=[
    "Framework :: AsyncIO",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
]
keywords=[
    "stream",
    "processing",
    "asyncio",
    "distributed",
    "queue",
    "kafka",
]
dynamic = [
    "version",
    "dependencies",
]

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
    "wheel",
    "cython>=0.29; implementation_name == 'cpython'",
    "cython>=3.0.0b3; implementation_name == 'cpython' and python_version >= '3.12'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# enables setuptools_scm to provide the dynamic version

#[tool.setuptools]
#include-package-data = true
#license-files = ["LICENSES"]
#zip-safe = false


[tool.flake8]
ignore = [
    "W503",
    "E203",
    "B305",
]
max-line-length = 88

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
addopts = [
  "--cov-report=term-missing:skip-covered",
  "--cov=faust",
  "-rxXs",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
    "error::ResourceWarning",
]
xfail_strict = true

testpaths = [
    "tests",
    "integration",
]


[tool.cibuildwheel]
build = "cp3*"

archs = ["auto64"]
skip = ["*musllinux*"]

before-build = "pip install Cython"

manylinux-x86_64-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"
